# quantitative_trading_projects

./: .env.example  .gitignore  README.md  ops.sh  requirements.txt  run_daily.sh
engine/: CMakeLists.txt  CMakeUserPresets.json  build.sh  conanfile.txt
engine/.conan2/: global.conf  settings.yml
engine/.conan2/p/: cache.sqlite3
engine/.conan2/p/b/gtest73b707c225b49/p/: conaninfo.txt  conanmanifest.txt
engine/.conan2/p/b/libso64d4ead000fec/b/: conaninfo.txt
engine/.conan2/p/b/libso64d4ead000fec/p/: conanmanifest.txt
engine/.conan2/p/b/protoc86f4b83858e9/b/: conaninfo.txt
engine/.conan2/p/bench895ea437fa390/d/: conan_package.tgz
engine/.conan2/p/bench895ea437fa390/p/: conaninfo.txt  conanmanifest.txt
engine/.conan2/p/bencha21489d474a65/d/: conan_export.tgz
engine/.conan2/p/bencha21489d474a65/e/: conandata.yml  conanmanifest.txt
engine/.conan2/p/cmake069207dcf8560/d/: conan_export.tgz
engine/.conan2/p/cmake069207dcf8560/e/: conandata.yml  conanmanifest.txt
engine/.conan2/p/cppzm0c71a752fad11/d/: conan_package.tgz
engine/.conan2/p/cppzm0c71a752fad11/p/: conanmanifest.txt
engine/.conan2/p/cppzm2022d0c59343f/d/: conan_export.tgz
engine/.conan2/p/cppzm2022d0c59343f/e/: conandata.yml  conanmanifest.txt
engine/.conan2/p/fmtce0345343b4fd/d/: conan_package.tgz
engine/.conan2/p/fmtce0345343b4fd/p/: conaninfo.txt  conanmanifest.txt
engine/.conan2/p/fmtfd0fc8a6cd618/d/: conan_export.tgz
engine/.conan2/p/fmtfd0fc8a6cd618/e/: conandata.yml  conanmanifest.txt
engine/.conan2/p/libsoeda8119aae8a5/d/: conan_export.tgz  conan_sources.tgz
engine/.conan2/p/libsoeda8119aae8a5/e/: conandata.yml  conanmanifest.txt
engine/.conan2/p/protoaf6acfe57df64/d/: conan_export.tgz  conan_sources.tgz
engine/.conan2/p/protoaf6acfe57df64/e/: conandata.yml  conanmanifest.txt
engine/.conan2/p/spdlo122baf0709834/d/: conan_export.tgz
engine/.conan2/p/spdlo122baf0709834/e/: conandata.yml  conanmanifest.txt
engine/.conan2/p/yaml-8917f9ac57775/d/: conan_package.tgz
engine/.conan2/p/yaml-8917f9ac57775/p/: conaninfo.txt  conanmanifest.txt
engine/.conan2/p/yaml-ecb910d68e553/d/: conan_export.tgz
engine/.conan2/p/yaml-ecb910d68e553/e/: conandata.yml  conanmanifest.txt
engine/.conan2/p/zerom86d61cf85f13d/d/: conan_export.tgz  conan_sources.tgz
engine/.conan2/p/zerom86d61cf85f13d/e/: conandata.yml  conanmanifest.txt
engine/.conan2/p/zlibc1f6258f9f055/d/: conan_package.tgz
engine/.conan2/p/zlibc1f6258f9f055/p/: conaninfo.txt  conanmanifest.txt
engine/benchmarks/: CMakeLists.txt  bench_risk.cpp  bench_spsc.cpp
engine/config/: engine.yaml
engine/include/quant/core/: bar.h  event.h  order.h  position.h  trade.h  types.h
engine/include/quant/gateway/: base_gateway.h  gateway_factory.h
engine/include/quant/infra/: logger.h  memory_pool.h  spsc_queue.h  timer.h
engine/include/quant/oms/: order_manager.h  pnl_calculator.h  position_manager.h
engine/include/quant/risk/: pre_trade_check.h  real_time_monitor.h
engine/proto/: signal.proto
engine/python/: signal_pb2.py  signal_sender.py
engine/src/: main.cpp  signal_receiver.cpp
engine/src/gateway/: mock_gateway.cpp
engine/src/oms/: order_manager.cpp  position_manager.cpp
engine/src/risk/: pre_trade_check.cpp
engine/tests/: CMakeLists.txt  test_order_manager.cpp  test_position_manager.cpp  test_risk.cpp  test_spsc_queue.cpp
(+297 files in other folders)
